# src/routes/userRoutes.js
@@ -5,6 +5,7 @@ const userController = require("../controllers/userController");
 router.get("/", userController.all);
 router.post("/", userController.insert);
 router.get("/:id", userController.getUserById);
+router.get("/username/:username", userController.getUserByUsername);
 router.put("/:id", userController.update);
 router.delete("/:id", userController.deleteById);
 
